Move MCPJdbcMetadataLoader